--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-animated-cursor": "^2.8.1",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
+    "react-particles": "^2.12.2",
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
     "three": "^0.156.1",
+    "tsparticles": "^2.12.0",
     "typescript": "5.2.2",
     "typewriter-effect": "^2.20.1"
   }
